--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,5 +71,6 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation platform('com.google.firebase:firebase-bom:32.1.0')
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.google.android.gms:play-services-base:17.6.0'
 }
