--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: 
+  cloud_firestore: null
   cupertino_icons: ^1.0.2
-  firebase_core: 
-  firebase_storage: 
+  firebase_core: null
+  firebase_storage: null
   flutter:
     sdk: flutter
-  google_fonts: 
-  image_picker: 
+  flutter_bloc: ^8.1.3
+  google_fonts: null
+  image_picker: null
 
 dev_dependencies:
   flutter_lints: ^2.0.0
