--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   cloud_firestore: null
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.6.1
   firebase_core: null
   firebase_storage: null
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  meta: ^1.9.1
+  shared_preferences: ^2.1.1
   google_fonts: null
   image_picker: null
 
@@ -57,6 +60,7 @@ flutter:
     - assets/landing_pic_1.png
     - assets/landing_pic_2.png
     - assets/landing_pic_3.png
+    - assets/google_png.png
     - assets/puma.png
     - assets/yonex.png
     - assets/nike.png
